# ecs-zombie-survival

./: .gitignore  CMakeLists.txt  goals.txt  licences.txt  main.cpp  tests.cpp
components/: animation.hpp  flashlight.hpp  position.hpp  rotation.hpp  scale.hpp  survivor.hpp  zombie.hpp
constants/: animation-constants.hpp  survivor-animation-constants.hpp  window-constants.hpp  zombie-animation-constants.hpp
core/: game.cpp  game.hpp  logger.hpp
exceptions/: unexpected-event-error.cpp  unexpected-event-error.hpp
maths/: degrees.hpp  radians.cpp  radians.hpp
setup/: crash-handler.hpp  logger-setup.cpp  player.cpp  player.hpp  survivor-renderer-setup.cpp  survivor-renderer-setup.hpp  survivor-setup.cpp  survivor-setup.hpp  texture-loader.cpp  texture-loader.hpp  window.cpp  window.hpp  zombie-renderer-setup.cpp  zombie-renderer-setup.hpp  zombie-setup.cpp  zombie-setup.hpp
systems/: aimer.cpp  aimer.hpp  ievent-system.cpp  ievent-system.hpp  isystem.cpp  isystem.hpp  itime-system.cpp  itime-system.hpp  looped-animator.cpp  looped-animator.hpp  sprite-renderer.cpp  sprite-renderer.hpp  survivor-renderer.cpp  survivor-renderer.hpp  systems.hpp
systems/tests/: looped-animator-tests.cpp
types/: angle.hpp  component-ids.hpp  frame.hpp  size.hpp  textures.hpp  window-size.hpp
